Fix icon spacing and footer overlap

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ nav {
 }
 
 header {
+	padding-right: 20px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -165,6 +166,10 @@ header {
 		background-color: black;
 	}
 
+	& .socials {
+		display: flex;
+	}
+
 	@media (min-width: 700px) {
 		display: none;
 	}
@@ -175,7 +180,7 @@ header {
 /* ---------------     Main     --------------- */
 
 #changing-content {
-	margin-bottom: calc(var(--footer-height) * 1.3);
+	margin-bottom: calc(var(--footer-height) * 2);
 
 	display: flex;
 	flex-direction: column;
